<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="13dp"

        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/VertFance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/divRecetteNutri_img"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="fitXY"
                android:src="@drawable/wait4"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Gris"
                    android:text="@string/divRecetteNutri_titre" />
                <TextView
                    android:id="@+id/divRecetteNutri_titre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="Recette de Mojito Maginto Blanc Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Gris"
                    android:text="@string/divRecetteNutri_calorie" />
                <TextView
                    android:id="@+id/divRecetteNutri_calorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="Recette de Mojito Maginto Blanc Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Gris"
                    android:text="@string/divRecetteNutri_carb" />
                <TextView
                    android:id="@+id/divRecetteNutri_carb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="Recette de Mojito Maginto Blanc Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Gris"
                    android:text="@string/divRecetteNutri_fat" />
                <TextView
                    android:id="@+id/divRecetteNutri_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="Recette de Mojito Maginto Blanc Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Gris"
                    android:text="@string/divRecetteNutri_protein" />
                <TextView
                    android:id="@+id/divRecetteNutri_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="Proteine" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/divRecetteNutri_butt"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_symp_item"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/VertFance"
                    android:text="@string/divRecetteNutri_butt" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>