<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/VertFance">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textColor="@color/Gris"
                android:text="@string/result_maladieHint" />

            <TextView
                android:id="@+id/diagnoResult_maladie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:longClickable="true"
                android:focusable="true"
                android:textColor="@color/White"
                android:text="Cancer de kach hadja kima djabou corona virus covid 19" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textColor="@color/Gris"
                android:text="@string/divResult_probaHint" />

            <TextView
                android:id="@+id/diagnoResult_proba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="proba:" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textColor="@color/Gris"
                android:text="@string/divResult_specHint" />

            <TextView
                android:id="@+id/diagnoResult_spec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="Spécialisation:" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/diagnoResult_deatailButt"
            android:layout_width="160dp"
            android:layout_height="33dp"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:textSize="12sp"
                    android:textColor="@color/VertFance"
                    android:text="@string/divResult_maladieInfoButt"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>