<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/VertBlanc"
    tools:context=".Food.NutritionActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"

            app:expandedTitleGravity="center"
            android:gravity="center"
            app:titleTextColor="@color/White"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"
                android:gravity="center"
                android:background="@color/VertBlanc"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/VertFance"
                    android:gravity="center"
                    android:text="Doctor"
                    android:textColor="@color/White"
                    android:textSize="37sp"
                    app:fontFamily="@font/sanchezz" />



            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="15dp"

                app:layout_collapseMode="pin"
                />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_marginTop="30dp"
               android:layout_marginBottom="10dp"
               android:background="@color/VertBlanc"
               android:text="@string/nutrition_recetteIngr"
               android:textColor="@color/Gris"
               android:textSize="24sp"
               />

           <androidx.cardview.widget.CardView
               android:id="@+id/recetteIngr_intoleranceButt"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               app:cardCornerRadius="10dp"
               android:layout_margin="10dp"
               app:cardElevation="0dp"
               app:cardBackgroundColor="@color/VertFance"
               android:foreground="?android:attr/selectableItemBackground"
               android:clickable="true">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="15dp"
                   android:gravity="center">
                   <TextView
                       android:id="@+id/recetteIngr_intoleransListe"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/asap"
                       android:layout_weight="1"
                       android:textColor="@color/White"
                       android:textSize="16sp"
                       android:text="@string/recetteIngr_intoleransListe"/>

                   <ImageView
                       android:layout_width="30dp"
                       android:layout_height="match_parent"
                       android:src="@drawable/dropdown" />
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <com.google.android.flexbox.FlexboxLayout
               android:id="@+id/recetteIngr_divIntolerance"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="10dp">

           </com.google.android.flexbox.FlexboxLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/VertBlanc"
               android:layout_marginLeft="13dp"
               android:layout_marginTop="20dp"
               android:longClickable="true"
               android:focusable="true"
               android:textIsSelectable="true"
               android:textColor="@color/VertFance"
               android:textSize="17sp"
               android:text="@string/recetteIngr_includeIng"
               />
           <EditText
               android:id="@+id/recetteIng_inp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:minHeight="200dp"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="10dp"
               android:padding="15dp"
               android:hint="@string/recetteIngr_inpHint"
               android:background="@drawable/bg_symp_item"
               android:gravity="top" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/VertBlanc"
               android:layout_marginLeft="13dp"
               android:layout_marginTop="20dp"
               android:longClickable="true"
               android:focusable="true"
               android:textIsSelectable="true"
               android:textColor="@color/VertFance"
               android:textSize="17sp"
               android:text="@string/recetteIngr_excludeIngr"
               />
           <EditText
               android:id="@+id/recetteIngr_excludeIngrHint"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:minHeight="200dp"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="10dp"
               android:padding="15dp"
               android:hint="@string/recetteIngr_excludeIngrHint"
               android:background="@drawable/bg_symp_item"
               android:gravity="top" />


           <androidx.cardview.widget.CardView
               android:id="@+id/recetteIng_testButt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="40dp"
               android:layout_marginBottom="20dp"
               app:cardCornerRadius="23dp"
               app:cardBackgroundColor="@color/VertFance">

               <LinearLayout
                   android:layout_width="180dp"
                   android:layout_height="44dp"
                   android:paddingLeft="39dp"
                   android:paddingRight="29dp"
                   android:gravity="center|left"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:fontFamily="@font/asap"
                       android:textColor="@color/White"
                       android:textSize="17sp"
                       android:text="@string/diag_result"/>
                   <ImageView
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:scaleType="fitXY"
                       android:src="@drawable/result" />

               </LinearLayout>
           </androidx.cardview.widget.CardView>



       </LinearLayout>
   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
